<resources>
    <string name="app_name">Premier League 2019/2020</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1">Teams</string>
    <string name="tab2">Table</string>
    <string name="tab3">Fixtures</string>
    <string name="points">Points</string>
    <string name="played">Played</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="favorite_team">Favorite Team</string>
    <string name="update_team">Update Team</string>
    <string name="pl">PL</string>
    <string name="club">Club</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="gd">GD</string>
    <string name="pts">PTS</string>
    <string name="premier_league">Premier League</string>
    <string name="p">P</string>
    <string name="team">Team</string>
    <string name="teamimage">TeamImage</string>
    <string name="nr">Nr.</string>
    <string name="position">Position</string>
    <string name="name">Name</string>
    <string name="nationality">Nationality</string>
    <string name="dash">-</string>
    <string name="set_prediction">Set Prediction</string>
    <string name="home_team_goals">Home team goals:</string>
    <string name="away_team_goals">Away team goals:</string>
</resources>
